// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`QueueItem > (Snapshot) renders collapsed state 1`] = `
<div
  class="relative"
  data-testid="queue-item"
>
  <div
    class="pointer-events-none absolute -top-0.75 -left-0.75 h-17.5 w-17.5 rounded-md transition-all"
  />
  <div
    class="border-border text-foreground rounded-md border-(length:--border-width) bg-background-secondary shadow-none group relative flex items-center gap-2 overflow-hidden ring-offset-white transition-all h-16 w-16 justify-center p-0"
    role="button"
  >
    <img
      alt="Bohemian Rhapsody"
      class="h-full w-full object-cover"
      src="https://picsum.photos/seed/queen/300"
    />
  </div>
</div>
`;

exports[`QueueItem > (Snapshot) renders collapsed state without onSelect 1`] = `
<div
  class="relative"
  data-testid="queue-item"
>
  <div
    class="pointer-events-none absolute -top-0.75 -left-0.75 h-17.5 w-17.5 rounded-md transition-all"
  />
  <div
    class="border-border text-foreground rounded-md border-(length:--border-width) bg-background-secondary shadow-none group relative flex items-center gap-2 overflow-hidden ring-offset-white transition-all h-16 w-16 justify-center p-0"
  >
    <img
      alt="Bohemian Rhapsody"
      class="h-full w-full object-cover"
      src="https://picsum.photos/seed/queen/300"
    />
  </div>
</div>
`;

exports[`QueueItem > (Snapshot) renders current state 1`] = `
<div
  class="border-border text-foreground h-full rounded-md border-(length:--border-width) shadow-none group group relative flex items-center gap-2 overflow-hidden ring-offset-white transition-all bg-primary w-full p-0"
  data-is-current="true"
  data-testid="queue-item"
  role="button"
>
  <div
    class="bg-background flex h-16 w-16 shrink-0 items-center justify-center overflow-hidden rounded-sm"
    data-testid="queue-item-thumbnail"
  >
    <img
      alt="Bohemian Rhapsody"
      class="h-full w-full object-cover"
      src="https://picsum.photos/seed/queen/300"
    />
  </div>
  <div
    class="min-w-0 flex-1"
  >
    <div
      class="text-foreground truncate text-sm font-bold"
      data-testid="queue-item-title"
    >
      Bohemian Rhapsody
    </div>
    <div
      class="text-foreground truncate text-xs"
      data-testid="queue-item-artist"
    >
      Queen
    </div>
  </div>
  <div
    class="relative flex shrink-0 items-center justify-start"
  >
    <div
      class="text-foreground mr-4 text-sm tabular-nums"
      data-testid="queue-item-duration"
    >
      5:54
    </div>
    <button
      aria-label="Remove from queue"
      class="inline-flex cursor-pointer items-center rounded-md whitespace-nowrap transition-all outline-none disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-primary border-border border-(length:--border-width) size-8 justify-center absolute right-4 opacity-0 group-hover:opacity-100"
      data-headlessui-state=""
      data-testid="queue-item-remove-button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`QueueItem > (Snapshot) renders default state 1`] = `
<div
  class="border-border text-foreground h-full rounded-md border-(length:--border-width) bg-background-secondary shadow-none group group relative flex items-center gap-2 overflow-hidden ring-offset-white transition-all w-full p-0"
  data-is-current="false"
  data-testid="queue-item"
  role="button"
>
  <div
    class="bg-background flex h-16 w-16 shrink-0 items-center justify-center overflow-hidden rounded-sm"
    data-testid="queue-item-thumbnail"
  >
    <img
      alt="Bohemian Rhapsody"
      class="h-full w-full object-cover"
      src="https://picsum.photos/seed/queen/300"
    />
  </div>
  <div
    class="min-w-0 flex-1"
  >
    <div
      class="text-foreground truncate text-sm font-bold"
      data-testid="queue-item-title"
    >
      Bohemian Rhapsody
    </div>
    <div
      class="text-foreground truncate text-xs"
      data-testid="queue-item-artist"
    >
      Queen
    </div>
  </div>
  <div
    class="relative flex shrink-0 items-center justify-start"
  >
    <div
      class="text-foreground mr-4 text-sm tabular-nums"
      data-testid="queue-item-duration"
    >
      5:54
    </div>
    <button
      aria-label="Remove from queue"
      class="inline-flex cursor-pointer items-center rounded-md whitespace-nowrap transition-all outline-none disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-primary border-border border-(length:--border-width) size-8 justify-center absolute right-4 opacity-0 group-hover:opacity-100"
      data-headlessui-state=""
      data-testid="queue-item-remove-button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`QueueItem > (Snapshot) renders error state 1`] = `
<div
  class="border-border text-foreground h-full rounded-md border-(length:--border-width) bg-background-secondary shadow-none group group relative flex items-center gap-2 overflow-hidden ring-offset-white transition-all w-full p-0"
  data-is-current="false"
  data-testid="queue-item"
  role="button"
>
  <div
    class="bg-accent-red absolute top-0 right-0 bottom-0 left-0 w-2 border-0"
  />
  <div
    class="bg-background flex h-16 w-16 shrink-0 items-center justify-center overflow-hidden rounded-sm"
    data-testid="queue-item-thumbnail"
  >
    <img
      alt="Bohemian Rhapsody"
      class="h-full w-full object-cover"
      src="https://picsum.photos/seed/queen/300"
    />
  </div>
  <div
    class="min-w-0 flex-1"
  >
    <div
      class="text-foreground truncate text-sm font-bold"
      data-testid="queue-item-title"
    >
      Bohemian Rhapsody
    </div>
    <div
      class="text-foreground truncate text-xs"
      data-testid="queue-item-artist"
    >
      Queen
    </div>
    <div
      class="bg-accent-red text-foreground border-border mt-1 inline-flex max-w-full items-center gap-1 rounded-sm border px-1 py-0.5 text-xs"
      data-testid="queue-item-error"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-circle-alert"
        fill="none"
        height="12"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="12"
        xmlns="http://www.w3.org/2000/svg"
      >
        <circle
          cx="12"
          cy="12"
          r="10"
        />
        <line
          x1="12"
          x2="12"
          y1="8"
          y2="12"
        />
        <line
          x1="12"
          x2="12.01"
          y1="16"
          y2="16"
        />
      </svg>
      <span
        class="truncate"
      >
        Playback error
      </span>
    </div>
  </div>
  <div
    class="relative flex shrink-0 items-center justify-start"
  >
    <div
      class="text-foreground mr-4 text-sm tabular-nums"
      data-testid="queue-item-duration"
    >
      5:54
    </div>
    <button
      aria-label="Remove from queue"
      class="inline-flex cursor-pointer items-center rounded-md whitespace-nowrap transition-all outline-none disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-primary border-border border-(length:--border-width) size-8 justify-center absolute right-4 opacity-0 group-hover:opacity-100"
      data-headlessui-state=""
      data-testid="queue-item-remove-button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
  </div>
</div>
`;

exports[`QueueItem > (Snapshot) renders loading state 1`] = `
<div
  class="border-border text-foreground h-full rounded-md border-(length:--border-width) bg-background-secondary shadow-none group group relative flex items-center gap-2 overflow-hidden ring-offset-white transition-all opacity-70 w-full p-0"
  data-is-current="false"
  data-testid="queue-item"
  role="button"
>
  <div
    class="bg-background flex h-16 w-16 shrink-0 items-center justify-center overflow-hidden rounded-sm"
    data-testid="queue-item-thumbnail"
  >
    <img
      alt="Bohemian Rhapsody"
      class="h-full w-full object-cover"
      src="https://picsum.photos/seed/queen/300"
    />
  </div>
  <div
    class="min-w-0 flex-1"
  >
    <div
      class="text-foreground truncate text-sm font-bold"
      data-testid="queue-item-title"
    >
      Bohemian Rhapsody
    </div>
    <div
      class="text-foreground truncate text-xs"
      data-testid="queue-item-artist"
    >
      Queen
    </div>
  </div>
  <div
    class="relative flex shrink-0 items-center justify-start"
  >
    <div
      class="text-foreground mr-4 text-sm tabular-nums"
      data-testid="queue-item-duration"
    >
      5:54
    </div>
    <button
      aria-label="Remove from queue"
      class="inline-flex cursor-pointer items-center rounded-md whitespace-nowrap transition-all outline-none disabled:cursor-not-allowed disabled:opacity-50 text-foreground bg-primary border-border border-(length:--border-width) size-8 justify-center absolute right-4 opacity-0 group-hover:opacity-100"
      data-headlessui-state=""
      data-testid="queue-item-remove-button"
      type="button"
    >
      <svg
        aria-hidden="true"
        class="lucide lucide-x"
        fill="none"
        height="16"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="16"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
  </div>
  <div
    class="bg-stripes-diagonal absolute inset-x-0 bottom-0 h-1"
  />
</div>
`;

exports[`QueueItem > renders without callbacks 1`] = `
<div
  class="border-border text-foreground h-full rounded-md border-(length:--border-width) bg-background-secondary shadow-none group group relative flex items-center gap-2 overflow-hidden ring-offset-white transition-all w-full p-0"
  data-is-current="false"
  data-testid="queue-item"
>
  <div
    class="bg-background flex h-16 w-16 shrink-0 items-center justify-center overflow-hidden rounded-sm"
    data-testid="queue-item-thumbnail"
  >
    <img
      alt="Bohemian Rhapsody"
      class="h-full w-full object-cover"
      src="https://picsum.photos/seed/queen/300"
    />
  </div>
  <div
    class="min-w-0 flex-1"
  >
    <div
      class="text-foreground truncate text-sm font-bold"
      data-testid="queue-item-title"
    >
      Bohemian Rhapsody
    </div>
    <div
      class="text-foreground truncate text-xs"
      data-testid="queue-item-artist"
    >
      Queen
    </div>
  </div>
  <div
    class="relative flex shrink-0 items-center justify-start"
  >
    <div
      class="text-foreground mr-4 text-sm tabular-nums"
      data-testid="queue-item-duration"
    >
      5:54
    </div>
  </div>
</div>
`;
